2024-05-12 ethanc8R (github user)

	* Headers/Foundation/NSRegularExpression.h:
	* Headers/Foundation/NSString.h:
	* Source/NSRegularExpression.m:
	* Source/NSString.m:
	* Tests/base/NSString/enumerateSubstringsInRange.m:
	Added regular expression search methods.

2024-05-08 Hugo Melder <hugo@algoriddim.com>

	* Source/NSIndexSet.m:
	* Tests/base/NSIndexSet/enumerateRanges.m:
	Implement enumerateRangesInRange convenience methods
	and tests.

2024-05-07 Hugo Melder <hugo@algoriddim.com>

	* Source/NSURLSession.m:
	_NSURLProtocolClient did not call completion handlers
	in task:didFailWithError:.
	Removed extraneous runtime calls.

2024-04-28 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSPrivate.h:
	* Source/NSLock.m:
	* Source/NSPathUtilities.m:
	Fix for bug #399 ... the problem occurred becaause gnustep_global_lock
	does not exist until +initialize is called on NSObject so in the path
	utilities function the -lock message as sent to nil and the -unlock
	message as sent to the lock.
	The change adds a new GSPrivateGlobalLock() function to reliably return
	a recursive lock, and alters the NSPathUtilities code to use it instead
	of gnustep_global_lock (we should probably do that elsewhere too).

2024-04-15 Frederik Seiffert <frederik@algoriddim.com>

	* Source/NSObject.m: add +[NSObject _TrivialAllocInit] to enable
	fast-path alloc / init methods with libobjc2 2.2.

2024-04-02 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURLSession.m: fix for #385

2024-03-11 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSNotificationCenter.m: Ensure class pointer is initialised
	before use (git issue #381).

2024-03-10 Hugo Melder <service@hugomelder.com>
	* Headers/Foundation/NSDate.h:
	* Source/NSDate.m:
	Added the +[NSDate now] constructor, which was introduced in macOS 10.15.

2024-03-04 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSJSONSerialization.m: Fix leak reported by Larry Campbell
	git issue #377

2024-02-20 Richard Frith-Macdonald <rfm@gnu.org>
